[package]
name = "zk-shell-rs"
version = "0.1.0"
authors = ["Raul Gutierrez S. <rgs@itevenworks.net>"]
repository = "https://github.com/rgs1/zk-shell-rs.git"
keywords = ["zookeeper", "distributed systems", "shell"]
readme = "README.md"

[dependencies.zookeeper]
git = "https://github.com/bonifaido/rust-zookeeper.git"

[dependencies]
ansi_term = "*"
getopts = "*"
lazy_static = "0.1.*"
